syntax = "proto3";

option csharp_namespace = "GRPC.Dotnet.WebApplication";

package pb;

message blank {}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryReponse {
  Category category = 1;
}

message CategoryList {
  repeated Category categories = 1;
}

message CategoryGetRequest {
  string id = 1;
}


service CategoryServ{
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryReponse) {}
  rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
  rpc ListCategories(blank) returns (CategoryList){}
  rpc GetCategory(CategoryGetRequest) returns (Category){}
  rpc CreateCategoryStreamBirectional(stream CreateCategoryRequest) returns (stream Category) {}
} 